Ajout de attribut "rel" sur trois liens de réseaux

--- a/index.html
+++ b/index.html
@@ -503,9 +503,9 @@
                 <div class="footer-col footer-social">
                     <h3>Suivez-moi</h3>
                     <div class="social-icons">
-                        <a href="https://www.instagram.com/marc_comedien_figurant" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/marc-l-938655214" target="_blank"><i class="fab fa-linkedin"></i></a>
-						<a href="https://nawak.com/book/marc-lory" target="_blank" class="icon-large">
+                        <a href="https://www.instagram.com/marc_comedien_figurant" rel="instagram-link" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/marc-l-938655214" rel="linkedin-link" target="_blank"><i class="fab fa-linkedin"></i></a>
+						<a href="https://nawak.com/book/marc-lory" target="_blank" rel="nawak-link" class="icon-large">
 				        <i class="fa-solid fa-n"></i>
 				      </a> 
                     </div>
