--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lory Marc – Comédien & Figurant à Lille | Site officiel</title>
+    <title>Lory Marc – Comédien & Figurant à Ecquevilly | Site officiel</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="logo.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
