Update CV download link to include file extension

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <li class="nav-item"><a href="#gallery" class="nav-link">Galerie</a></li>
                     <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
                 </ul> 
-                <a href="CV2025vf" id="cv-download-btn" class="btn">Télécharger mon CV</a>
+                <a href="CV2025vf.pdf" id="cv-download-btn" class="btn">Télécharger mon CV</a>
                 
                 <div class="popup-overlay" id="popup-overlay">
                     <div class="popup">
