--- a/index.html
+++ b/index.html
@@ -315,6 +315,18 @@
 					<div class="experience-card">
                         <div class="card-inner">
                             <div class="card-front">
+                                <h4>Tournage pour la WarnerBros_France et Free_France</h4>
+                                <p>Expérience auprès d'une agence professionnelle et rôle unique de comédie.</p>
+                            </div>
+                            <div class="card-back">
+                                <h5>Ce que ça m’a apporté</h5>
+                                <p>Compétences dans les domaines du maquillage, de la coiffure, et de la gestion de caméra multiples.</p>
+                            </div>
+                        </div>
+                    </div>
+					<div class="experience-card">
+                        <div class="card-inner">
+                            <div class="card-front">
                                 <h4>"Figuration dans le film Garance" </h4>
                                 <p>"Septembre 2025"</p>
                             </div>
@@ -369,18 +381,6 @@
                             <div class="card-back">
                                 <h5>Ce que ça m’a apporté</h5>
                                 <p>J'ai développé mes compétences en création de personnage et en maquillage artistique.</p>
-                            </div>
-                        </div>
-                    </div>
-                     <div class="experience-card">
-                        <div class="card-inner">
-                            <div class="card-front">
-                                <h4>Pièce de théâtre en primaire</h4>
-                                <p>Premiers pas sur scène. Découverte de la scène, du jeu et du lien avec le public.</p>
-                            </div>
-                            <div class="card-back">
-                                <h5>Ce que ça m’a apporté</h5>
-                                <p>Cette première expérience a révélé ma passion pour la scène et le contact avec le public.</p>
                             </div>
                         </div>
                     </div>
