--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="#hero-about" class="nav-link"><i class="fas fa-home"></i></a></li>
 					<li class="nav-item"><a href="#skills" class="nav-link">Compétences</a></li>
+					<li class="nav-item"><a href="#bande-demo-section" class="nav-link">Bande démo</a></li>
                     <li class="nav-item"><a href="#experiences" class="nav-link">Expériences</a></li>
                     <li class="nav-item"><a href="#gallery" class="nav-link">Galerie</a></li>
                     <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
@@ -315,7 +316,7 @@
 					<div class="experience-card">
                         <div class="card-inner">
                             <div class="card-front">
-                                <h4>Tournage pour la WarnerBros_France et Free_France</h4>
+                                <h4>Tournage WarnerBrosFrance et FreeFrance</h4>
                                 <p>Expérience auprès d'une agence professionnelle et rôle unique de comédie.</p>
                             </div>
                             <div class="card-back">
@@ -528,8 +529,9 @@
                 <div class="footer-col footer-links">
                     <h3>Navigation</h3>
                     <ul>
-                        <li><a href="#hero-about">À propos</a></li>
+                        <li><a href="#hero-about">À propos</a></li> 
 						<li><a href="#skills">Compétences</a></li>
+						<li><a href="#bande-demo-section">Bande démo</a></li>
                         <li><a href="#experiences">Expériences</a></li>
                         <li><a href="#gallery-desktop">Galerie</a></li>
                         <li><a href="#contact">Contact</a></li>
