1 rem espacement experiences

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 			
 			observer.observe(skillsSection);
 			</script>
-			<section class="bande-demo-section">
+			<section class="bande-demo-section" id="bande-demo-section">
 				<h2 class="bande-demo-title">Bande Démo</h2>
 				<div class="bande-demo-container">
 					<div class="bande-demo-item bande-demo-medium" data-video="media/demo2.mp4" data-image="media/demo2.jpg">
