--- a/index.html
+++ b/index.html
@@ -290,10 +290,10 @@
 						<video src="media/warner.mp4" class="bande-demo-video" muted loop></video>
 					</div>
 
-					<div class="bande-demo-item bande-demo-vertical" data-video="grandpere.mp4" data-image="media/demo3.jpg">
+					<div class="bande-demo-item bande-demo-vertical" data-video="media/insta.mp4" data-image="media/demo3.jpg">
 						<div class="bande-demo-overlay">Format Insta/vertical</div>
-						<img src="media/demo3.jpg" alt="Projet Instagram" class="bande-demo-thumb" />
-						<video src="media/demo3.mp4" class="bande-demo-video" muted loop></video>
+						<img src="minia-insta.jpg" alt="Projet Instagram" class="bande-demo-thumb" />
+						<video src="grandpere.mp4" class="bande-demo-video" muted loop></video>
 					</div>
 				</div>
 			</section>
