--- a/index.html
+++ b/index.html
@@ -281,20 +281,21 @@
 					<div class="bande-demo-item bande-demo-vertical" data-video="media/insta.mp4" data-image="media/demo3.jpg">
 						<div class="bande-demo-overlay">Format Insta/vertical</div>
 						<img src="minia-insta.jpg" alt="Projet Instagram" class="bande-demo-thumb" />
-						<video src="grandpere.mp4" class="bande-demo-video" muted loop></video>
-					</div>
-
-					<div class="bande-demo-item bande-demo-medium" data-video="media/demo2.mp4" data-image="media/demo2.jpg">
-						<div class="bande-demo-overlay">Nouveau court-métrage papi</div>
-						<img src="media/demo2.jpg" alt="Nouveau projet" class="bande-demo-thumb" />
-						<video src="media/demo2.mp4" class="bande-demo-video" muted loop></video>
+						<video src="grandpere.mp4" class="bande-demo-video" loop></video>
 					</div>
 
 					<div class="bande-demo-item bande-demo-large" data-video="media/warner.mp4" data-image="media/warner.jpg">
 						<div class="bande-demo-overlay">Collaboration avec Warner Bros</div>
 						<img src="media/warner.jpg" alt="Warner Bros" class="bande-demo-thumb" />
-						<video src="media/warner.mp4" class="bande-demo-video" muted loop></video>
+						<video src="media/warner.mp4" class="bande-demo-video" loop></video>
 					</div>
+
+					<div class="bande-demo-item bande-demo-medium" data-video="media/demo2.mp4" data-image="media/demo2.jpg">
+						<div class="bande-demo-overlay">Nouveau court-métrage </div>
+						<img src="media/demo2.jpg" alt="Nouveau projet" class="bande-demo-thumb" />
+						<video src="media/demo2.mp4" class="bande-demo-video" loop></video>
+					</div>
+
 				</div>
 			</section>
 			<script>
