Update video and image sources in index.html

--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
 
 					<div class="bande-demo-item bande-demo-medium" data-video="media/demo2.mp4" data-image="media/demo2.jpg">
 						<div class="bande-demo-overlay">Nouveau court-métrage </div>
-						<img src="media/demo2.jpg" alt="Nouveau projet" class="bande-demo-thumb" />
-						<video src="media/demo2.mp4" class="bande-demo-video" loop></video>
+						<img src="minia-insta.jpg" alt="Nouveau projet" class="bande-demo-thumb" />
+						<video src="grandpere.mp4" class="bande-demo-video" loop></video>
 					</div>
 
 				</div>
