Change bande-demo-item class and update alt text
Updated class name and alt text for an image.

--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
 						<video src="media/warner.mp4" class="bande-demo-video" loop></video>
 					</div>
 
-					<div class="bande-demo-item bande-demo-medium" data-video="media/demo2.mp4" data-image="media/demo2.jpg">
+					<div class="bande-demo-item bande-demo-vertical" data-video="media/demo2.mp4" data-image="media/demo2.jpg">
 						<div class="bande-demo-overlay">Nouveau court-métrage </div>
-						<img src="minia-insta.jpg" alt="Nouveau projet" class="bande-demo-thumb" />
+						<img src="minia-insta.jpg" alt="Projet nouveau à venir" class="bande-demo-thumb" />
 						<video src="grandpere.mp4" class="bande-demo-video" loop></video>
 					</div>
 
