--- a/index.html
+++ b/index.html
@@ -284,15 +284,22 @@
 						<video src="grandpere.mp4" class="bande-demo-video" loop></video>
 					</div>
 
-					<div class="bande-demo-item bande-demo-large" data-video="media/warner.mp4" data-image="media/warner.jpg">
-						<div class="bande-demo-overlay">Collaboration avec Warner Bros</div>
-						<img src="media/warner.jpg" alt="Warner Bros" class="bande-demo-thumb" />
-						<video src="media/warner.mp4" class="bande-demo-video" loop></video>
+					<div class="bande-demo-item bande-demo-large">
+						<div class="bande-demo-item bande-demo-vertical" data-video="media/insta.mp4" data-image="media/demo3.jpg">
+							<div class="bande-demo-overlay">Collaboration avec Warner Bros</div>
+							<img src="media/warner.jpg" alt="Warner Bros" class="bande-demo-thumb" />
+							<video src="videolarge2.mp4" class="bande-demo-video" loop></video>
+						</div>
+						<div class="bande-demo-item bande-demo-vertical" data-video="media/insta.mp4" data-image="media/demo3.jpg">
+							<div class="bande-demo-overlay">Collaboration avec Warner Bros</div>
+							<img src="media/warner.jpg" alt="Warner Bros2" class="bande-demo-thumb" />
+							<video src="videolarge1.mp4" class="bande-demo-video" loop></video>
+						</div>
 					</div>
 
-					<div class="bande-demo-item bande-demo-vertical" data-video="media/demo2.mp4" data-image="media/demo2.jpg">
+					<div class="bande-demo-item bande-demo-medium" data-video="media/demo2.mp4" data-image="media/demo2.jpg">
 						<div class="bande-demo-overlay">Nouveau court-métrage </div>
-						<img src="minia-insta.jpg" alt="Projet nouveau à venir" class="bande-demo-thumb" />
+						<img src="minia-insta.jpg" alt="Nouveau projet" class="bande-demo-thumb" />
 						<video src="grandpere.mp4" class="bande-demo-video" loop></video>
 					</div>
 
