--- a/index.html
+++ b/index.html
@@ -287,12 +287,12 @@
 					<div class="bande-demo-item bande-demo-large">
 						<div class="bande-demo-item bande-demo-vertical" data-video="media/insta.mp4" data-image="media/demo3.jpg">
 							<div class="bande-demo-overlay">Collaboration avec Warner Bros</div>
-							<img src="media/warner.jpg" alt="Warner Bros" class="bande-demo-thumb" />
+							<img src="1image.jpg" alt="Warner Bros" class="bande-demo-thumb" />
 							<video src="videolarge2.mp4" class="bande-demo-video" loop></video>
 						</div>
 						<div class="bande-demo-item bande-demo-vertical" data-video="media/insta.mp4" data-image="media/demo3.jpg">
 							<div class="bande-demo-overlay">Collaboration avec Warner Bros</div>
-							<img src="media/warner.jpg" alt="Warner Bros2" class="bande-demo-thumb" />
+							<img src="2image.jpeg" alt="Warner Bros2" class="bande-demo-thumb" />
 							<video src="videolarge1.mp4" class="bande-demo-video" loop></video>
 						</div>
 					</div>
