Refactor HTML structure for bande-demo items

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 						<video src="grandpere.mp4" class="bande-demo-video" loop></video>
 					</div>
 
-					<div class="bande-demo-item bande-demo-large">
+					<div class="bande-demo-mid-container">
 						<div class="bande-demo-item bande-demo-vertical miditem1" data-video="media/insta.mp4" data-image="media/demo3.jpg">
 							<div class="bande-demo-overlay">Collaboration avec Warner Bros</div>
 							<img src="1image.jpg" alt="Warner Bros" class="bande-demo-thumb" />
