--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head> 
-	<!-- Google Tag Manager -->
-		<script>
+	<script>
 			(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 			})(window,document,'script','dataLayer','GTM-53H9HRQK');
 		</script>
-	<!-- End Google Tag Manager -->
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lory Marc – Comédien & Figurant à Ecquevilly | Site officiel</title>
     <link rel="stylesheet" href="style.css">
@@ -22,7 +20,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<meta name="description" content="Lory Marc, comédien et figurant basé à Ecquevilly. Découvrez son parcours, ses expériences et ses projets dans le cinéma, le théâtre et la publicité.">
-	<!-- GOOGLE SEO -->
 	<link rel="canonical" href="https://lory-marc.fr/">
 	
 	<meta property="og:title" content="Lory Marc – Portfolio">
@@ -51,11 +48,9 @@
 	</script>
 </head>
 <body class="dark">
-	<!-- Google Tag Manager (noscript) -->
-		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-53H9HRQK"
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-53H9HRQK"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-	<!-- End Google Tag Manager (noscript) -->
-    <div id="loader">
+	<div id="loader">
         <div class="spinner"></div>
     </div>
 
@@ -559,16 +554,12 @@
         </footer>
 
     </div>
-    <div class="style-switcher">
-        <div class="style-switcher-toggler">
-            <i class="fa fa-cog fa-spin"></i>
-        </div>
-        <h4>Thème du site</h4>
-        <div class="theme-buttons">
-			<span class="theme-btn dark-mode active" onclick="setTheme('dark')">Dark</span>
-			<span class="theme-btn light-mode" onclick="setTheme('light')">Light</span>
-        </div>
+
+    <div class="scenic-mode-toggle" id="modeSceneToggle">
+        <i class="fas fa-camera-retro mode-icon-ombre"></i>
+        <i class="fas fa-sun mode-icon-lumiere"></i>
     </div>
+
 	<button id="backToTop"><i class="fas fa-arrow-up"></i></button>
     <script src="script.js"></script>
 	<script>
