--- a/index.html
+++ b/index.html
@@ -1035,6 +1035,7 @@ document.addEventListener("DOMContentLoaded", () => {
                     <a href="#" class="nav-logo footer-logo">Marc Lory</a>
 
                     <p class="footer-copyright">&copy; 2025 Marc Lory. Tous droits réservés.</p>
+                    <p> Crédits à Ismael CHARI, Développeur web freelance basé à Lille</p>
 
 <p class="cpgu-link">Voir notre <a href="privacy.html">Politique de confidentialité</a> et nos <a href="conditions.html">Conditions générales d'utilisation</a></p> 
 
